# coalesce

./: Cargo.toml  README.md  test_output.py  test_python.py  test_rust  test_rust.rs
ISSUES/: README.md  ROADMAP.md
ISSUES/P0/: 001-real-js-parser.md  002-test-data.md  003-code-generation.md
ISSUES/P1/: 004-tree-sitter.md  005-c-parser.md
ISSUES/P2/: 007-surrealdb.md
ISSUES/milestone-1-foundation/: README.md
crates/coalesce-cli/: Cargo.toml
crates/coalesce-cli/src/: main.rs  main_corrupted.rs
crates/coalesce-core/: Cargo.toml
crates/coalesce-core/src/: errors.rs  lib.rs  traits.rs  types.rs
crates/coalesce-gen/: Cargo.toml
crates/coalesce-gen/src/: lib.rs  system_generators.rs
crates/coalesce-lal/: Cargo.toml
crates/coalesce-lal/src/: detector.rs  lib.rs  patterns.rs  registry.rs  transformer.rs
crates/coalesce-parser/: Cargo.toml
crates/coalesce-parser/src/: c.rs  cpp.rs  csharp.rs  fsharp.rs  go.rs  javascript.rs  lib.rs  rust_parser.rs  tree_sitter_parser.rs  vb.rs
docs/: api-design.md  architecture.md  contributing.md  data-flow.md  legacy-patterns.md  library-abstraction.md  roadmap.md  uir-specification.md
examples/banking-cobol/src/: ACCOUNT.COB  INTEREST.COB
examples/library-examples/: django-models.py  networking-client.c  react-component.js
examples/modern-js/src/: api-client.js  task-manager.js
examples/network-c/src/: session.c  session.h
studio/: README.md  index.html  package-lock.json  package.json  server.js  vite.config.ts
studio/src/: App.tsx  App_backup.tsx  index.css  index.tsx
studio/src/components/: CodeEditor.tsx  GraphView.tsx  KnowledgeGraph.tsx  MonacoEditor.tsx  StatusBar.tsx  Toolbar.tsx  TranslationPanel.tsx
studio/src/types/: uir.ts
studio/src/utils/: CodeAnalyzer.ts
