[package]
name = "coalesce-lal"
version = "0.1.0"
edition = "2021"

[dependencies]
coalesce-core = { path = "../coalesce-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.10"
semver = "1.0"
anyhow = "1.0"
thiserror = "1.0"

[lib]
name = "coalesce_lal"
path = "src/lib.rs"
