[package]
name = "coalesce-parser"
version = "0.1.0"
edition = "2021"
description = "Language parsers for Coalesce"

[dependencies]
coalesce-core = { path = "../coalesce-core" }
tree-sitter = { workspace = true }
tree-sitter-javascript = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-go = "0.20"
tree-sitter-c-sharp = "0.20"
# F# and VB parsers will use regex-based parsing for now
regex = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
